--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "More Projects"
     url: /_pages/projects/mainProjects.md
-  - title: "More about me"
-    url: /_pages/others/moreAboutMe.md
+  # - title: "More about me"
+  #   url: /_pages/others/moreAboutMe.md
   - title: "Contacts"
     url: /_pages/others/contacts.md
   
