--- a/_config.yml
+++ b/_config.yml
@@ -153,6 +153,8 @@ footer:
 include:
   - .htaccess
   - _pages
+
+include: ["_pages", "_pages/techStack"]
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -279,14 +281,14 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type: posts
+      type: pages
     values:
       layout: single
       author_profile: true
-      read_time: true
-      comments: # true
-      share: true
-      related: true
+      # read_time: true
+      # comments: # true
+      # share: true
+      # related: true
 
 # remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 # minimal_mistakes_skin: "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
