--- a/_config.yml
+++ b/_config.yml
@@ -153,8 +153,8 @@ footer:
 include:
   - .htaccess
   - _pages
+  - _pages/techStack
 
-include: ["_pages", "_pages/techStack"]
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -229,6 +229,8 @@ plugins:
   - jekyll-gist
   # - jekyll-feed
   - jekyll-include-cache
+  - jekyll-remote-theme
+
 
 # mimic GitHub Pages with --safe
 whitelist:
@@ -292,6 +294,3 @@ defaults:
 
 # remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 # minimal_mistakes_skin: "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-plugins:
-  - jekyll-remote-theme
-  - jekyll-include-cache
