--- a/_data/projects-cards-data.yml
+++ b/_data/projects-cards-data.yml
@@ -1,17 +1,17 @@
 - image: /_pages/projects/roboticArm/RoboticArm.jpg
-  title: Full-Stack Robotic Arm Design; Software, Mechanical, and Electronics Integration
+  title: Full-Stack Robotic Arm Design
   tags:
     - MECH
     - CS
     - ELEC
     - AI
-  excerpt: Short project description 1
+  excerpt: <ul> <li>Designing a robot arm from scratch</li> <li>Combining expertise in mechanical engineering, electronics, and software development and enhance them</li> <li>Exploring the integration of artificial intelligence (AI) with robotics</li></ul>
   url: /roboticArm/
 
-- image: /path/to/project2-image.jpg
-  title: Project 2
+- image: /_pages/projects/tbsChatgpt/tbsChatgpt.jpg
+  title: Large Language Model integration - TBS internship
   tags:
-    - Tech Tag 3
-    - Tech Tag 4
-  excerpt: Short project description 2
+    - CS
+    - AI
+  excerpt: <ul> <li>Tasked with integrating ChatGPT as an internal tool at TBS</li> <li>Reducing unnecessary communications between departments and streamlining enquiry response time</li> <li>Ensuring secure local processing of information</li> <li>Explored various implementation of RAG, vectordb, LLM hosting and LLMs</li>  </ul>
   url: /projects/project2.html
