--- a/_data/projects-cards-data.yml
+++ b/_data/projects-cards-data.yml
@@ -6,7 +6,7 @@
     - ELEC
     - AI
   excerpt: <ul> <li>Designing a robot arm from scratch</li> <li>Combining expertise in mechanical engineering, electronics, and software development and enhance them</li> <li>Exploring the integration of artificial intelligence (AI) with robotics</li></ul>
-  url: /roboticArm/
+  url: /toBeUpdated/
 
 - image: /_pages/projects/tbsLLM/tbsLLM.jpg
   title: Large Language Model integration - TBS internship
@@ -15,3 +15,47 @@
     - AI
   excerpt: <ul> <li>Tasked with integrating ChatGPT as an internal tool at TBS</li> <li>Reducing unnecessary communications between departments and streamlining enquiry response time</li> <li>Ensuring secure local processing of information</li> <li>Explored various implementation of RAG, vectordb, LLM hosting and LLMs</li>  </ul>
   url: /tbsLLM/
+
+
+- image: /_pages/projects/useCPR/useCPRHeader.png
+  title: USE - CPR
+  tags:
+    - CS
+  excerpt: <ul> <li>To be updated</li>  </ul>
+  url: /toBeUpdated/
+
+- image: /_pages/projects/exchange/exchangeHeader.jpg
+  title: International Exchange - Australia
+  tags:
+  excerpt: <ul> <li>To be updated</li>  </ul>
+  url: /toBeUpdated/
+
+- image: /_pages/projects/realcycle/realcycleHeader.jpg
+  title: Realcycle
+  tags: 
+    - CS
+    - MECH
+    - AI
+  excerpt: <ul> <li>To be updated</li>  </ul>
+  url: /toBeUpdated/
+
+- image: /_pages/projects/balanceCar/balanceCarHeader.png
+  title: balanceCar
+  tags:
+    - CS
+    - MECH
+  excerpt: <ul> <li>To be updated</li>  </ul>
+  url: /toBeUpdated/
+
+- image: /_pages/projects/roboticsTeam/roboticsTeamHeader.jpg
+  title: roboticsTeam
+  tags: 
+    - MECH
+  excerpt: <ul> <li>To be updated</li>  </ul>
+  url: /toBeUpdated/
+
+- image: /_pages/projects/oldProjects/oldProjectsHeader.jpg
+  title: Projects and events before 2022
+  tags: Important
+  excerpt: <ul> <li>Contains my portfolio for ISDN entry</li> </ul>
+  url: /oldProjects/
