USE cpr add role

--- a/_data/projects-cards-data.yml
+++ b/_data/projects-cards-data.yml
@@ -21,7 +21,7 @@
   title: USE - CPR
   tags:
     - CS
-  excerpt: <ul> <li>To be updated</li>  </ul>
+  excerpt: <ul> <li>As a Backend developer</li><li>To be updated</li>  </ul>
   url: /toBeUpdated/
 
 - image: /_pages/projects/exchange/exchangeHeader.jpg
