Documenting USE-cpr

--- a/_data/projects-cards-data.yml
+++ b/_data/projects-cards-data.yml
@@ -23,8 +23,8 @@
   period: Dec 2023 - Current
   tags:
     - CS
-  excerpt: <ul> <li>As a Backend developer</li><li>To be updated</li>  </ul>
-  url: /toBeUpdated/
+  excerpt: <ul> <li>Education module for CPR and AED</li><li>As a Backend developer</li>  </ul>
+  url: /useCPR/
 
 - image: /_pages/projects/exchange/exchangeHeader.jpg
   title: International Exchange - Australia
