--- a/_data/projects-cards-data.yml
+++ b/_data/projects-cards-data.yml
@@ -41,7 +41,7 @@
     - MECH
     - AI
   excerpt: <ul> <li>CV algorithm training and deployment</li> <li>Created a highly customizable version of Google teachable machine like software</li> <li>Attained valuable experience in debugging a CV algorithm through training statistics</li> <li>enabling effective enhancements to model architecture, training data and hyper-parameters</li> <li>To be updated</li>  </ul>
-  url: /toBeUpdated/
+  url: /realcycle/
 
 - image: /_pages/projects/balanceCar/balanceCarHeader.png
   title: balanceCar
