--- a/_data/projects-cards-data.yml
+++ b/_data/projects-cards-data.yml
@@ -1,3 +1,11 @@
+- image: /_pages/projects/seahorseActuator/seahorseActuatorHeader.jpg
+  title: Seahorse Inspired Pre-Curled Actuator
+  period: May 2024 - Current
+  tags:
+    - Research Project
+  excerpt: <ul> <li>Gaining research experience</li><li>Literature review, experiment design, result demonstration & promotion</li> </ul>
+  url: /seahorseActuator/
+
 - image: /_pages/projects/cybathlon/cybathlonHeader.jpg
   title: Cybathlon 2024, ETH Zurich
   period: May 2024 - Oct 2024
