Added robotics team

--- a/_data/projects-cards-data.yml
+++ b/_data/projects-cards-data.yml
@@ -65,8 +65,8 @@
   period: Oct 2021 - Sep 2022
   tags: 
     - MECH
-  excerpt: <ul> <li>To be updated</li>  </ul>
-  url: /toBeUpdated/
+  excerpt: <ul> <li>Important mile stone in my robotics development career</li>  </ul>
+  url: /roboticsTeam/
 
 - image: /_pages/projects/oldProjects/oldProjectsHeader.jpg
   title: Projects and events before 2022
